--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,6 +62,16 @@ input.is-invalid ~ .invalid-feedback {
     font-size: 16px;
 }
 
+.button:not(:only-child) {
+    margin-right: 15px;
+}
+
+.form-button {
+    width: calc(100% - 20px);
+    font-size: 20px;
+    text-align: center;
+}
+
 select {
     background-color: #FFFFFF;
     margin-bottom: 15px;
@@ -537,7 +547,8 @@ label {
 }
 
 #myaccount-name-form-day,
-#admin-user-form-day {
+#admin-user-form-day
+ {
     width: 25%;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
