--- a/views/admin-users-user-privileges.pug
+++ b/views/admin-users-user-privileges.pug
@@ -2,29 +2,14 @@
 extends admin-home
 
 block admin-content
-    if privilegeTemplate
-        .myaccount-stack-view
-            a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="name/")
-                span Name
-                span.myaccount-stack-view__box-value= privilegeTemplate.name
-                img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
-            a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="title/")
-                span Title
-                span.myaccount-stack-view__box-value= privilegeTemplate.title
-                img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
-            a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="default/")
-                span Default
-                span.myaccount-stack-view__box-value= privilegeTemplate.default_template == 1 ? "Yes" : "No"
-                img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
-            a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="delete-privilege-template/")
-                span.red-text Delete Privilege Template
-                img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+    if adminUser
         h3 Privileges
         if error
             h2.error= error
         if success
             h2.success= success
         a.button(href="add-privilege/") Add Privilege
+        a.button(href="apply-template/") Apply Privilege Template
         form.myacount-form(method='POST' action='')
             .myaccount-table-view
                 table.myaccount-table
@@ -32,8 +17,8 @@ block admin-content
                         th.myaccount-table-view__cell--align-left Privilege Name
                         th.myaccount-table-view__cell--align-left Granted
                         th.myaccount-table-view__cell--align-left Denied
-                    if pt.getPrivileges()
-                        each value, privilege in pt.getPrivileges()
+                    if adminUser.getPrivileges()
+                        each value, privilege in adminUser.getPrivileges()
                             tr
                                 td.myaccount-table-view__cell--align-left= privilege
                                 td.myaccount-table-view__cell--align-left
