--- a/views/myaccount.pug
+++ b/views/myaccount.pug
@@ -8,9 +8,11 @@ block content
                 table
                     tr
                         td
-                            img(src="https://static.besterintranet.com/assets/images/logo.png" srcset="https://static.besterintranet.com/assets/images/logo96x96.png 2x" height="48" width="48")
+                            a.logo-link(href='https://www.besterintranet.' + (process.env.NODE_ENV == 'development' ? 'dev' : 'com') + '/')
+                                img(src="https://static.besterintranet.com/assets/images/logo.png" srcset="https://static.besterintranet.com/assets/images/logo96x96.png 2x" height="48" width="48")
                         td
-                            h1 Bester Intranet
+                            a.logo-link(href='https://www.besterintranet.' + (process.env.NODE_ENV == 'development' ? 'dev' : 'com') + '/')
+                                h1 Bester Intranet
             if user
                 .basic-header-right
                     .user-dropdown
