--- a/views/home.pug
+++ b/views/home.pug
@@ -34,28 +34,33 @@ block content
             p
                 a(href="https://accounts.besterintranet." + tld + "/login/") Login
         block home-content
-        .home-page-grid-container
-            .home-page-grid-container__widget
-                h1 Item
-            .home-page-grid-container__widget
-                h1 Item 2
-            .home-page-grid-container__widget
-                h1 Item 3
-                p Some more content to fill the space
-            .home-page-grid-container__widget
-                h1 Item 4
-            .home-page-grid-container__widget
-                h1 Item 5
-            .home-page-grid-container__widget
-                h1 Item 6
-            .home-page-grid-container__widget
-                h1 Item 7
-            .home-page-grid-container__widget
-                h1 Item 8
-            .home-page-grid-container__widget
-                h1 Item 9
-            .home-page-grid-container__widget
-                h1 Item 10
-            .home-page-grid-container__widget.home-page-grid-container__widget--add
-                a(href="/add/").home-page-grid-container__widget__full-link
-                    h1 Add Widget
+            if tld == 'dev'
+                .home-page-grid-container
+                    .home-page-grid-container__widget
+                        h1 Item
+                    .home-page-grid-container__widget
+                        h1 Item 2
+                    .home-page-grid-container__widget
+                        h1 Item 3
+                        p Some more content to fill the space
+                    .home-page-grid-container__widget
+                        h1 Item 4
+                    .home-page-grid-container__widget
+                        h1 Item 5
+                    .home-page-grid-container__widget
+                        h1 Item 6
+                    .home-page-grid-container__widget
+                        h1 Item 7
+                    .home-page-grid-container__widget
+                        h1 Item 8
+                    .home-page-grid-container__widget
+                        h1 Item 9
+                    .home-page-grid-container__widget
+                        h1 Item 10
+                    .home-page-grid-container__widget.home-page-grid-container__widget--add
+                        a(href="/add/").home-page-grid-container__widget__full-link
+                            h1 Add Widget
+            else
+                .home-page-grid-container
+                    .home-page-grid-container__widget
+                        h1 Coming Soon
