--- a/views/home.pug
+++ b/views/home.pug
@@ -36,31 +36,43 @@ block content
         block home-content
             if tld == 'dev'
                 .home-page-grid-container
-                    .home-page-grid-container__widget
-                        h1 Item
-                    .home-page-grid-container__widget
-                        h1 Item 2
-                    .home-page-grid-container__widget
-                        h1 Item 3
-                        p Some more content to fill the space
-                    .home-page-grid-container__widget
-                        h1 Item 4
-                    .home-page-grid-container__widget
-                        h1 Item 5
-                    .home-page-grid-container__widget
-                        h1 Item 6
-                    .home-page-grid-container__widget
-                        h1 Item 7
-                    .home-page-grid-container__widget
-                        h1 Item 8
-                    .home-page-grid-container__widget
-                        h1 Item 9
-                    .home-page-grid-container__widget
-                        h1 Item 10
-                    .home-page-grid-container__widget.home-page-grid-container__widget--add
-                        a(href="/add/").home-page-grid-container__widget__full-link
-                            h1 Add Widget
+                    //-.home-page-grid-container__widget
+                        .home-page-grid-container__widget-content
+                            h1 Item
+                    //-.home-page-grid-container__widget
+                        .home-page-grid-container__widget-content
+                            h1 Item 2
+                    //-.home-page-grid-container__widget
+                        .home-page-grid-container__widget-content
+                            h1 Item 3
+                            p Some more content to fill the space
+                    //-.home-page-grid-container__widget
+                        .home-page-grid-container__widget-content
+                            h1 Item 4
+                    //-.home-page-grid-container__widget
+                        .home-page-grid-container__widget-content
+                            h1 Item 5
+                    //-.home-page-grid-container__widget
+                        .home-page-grid-container__widget-content
+                            h1 Item 6
+                    //-.home-page-grid-container__widget
+                        .home-page-grid-container__widget-content
+                            h1 Item 7
+                    //-.home-page-grid-container__widget
+                        .home-page-grid-container__widget-content
+                            h1 Item 8
+                    //-.home-page-grid-container__widget
+                        .home-page-grid-container__widget-content
+                            h1 Item 9
+                    //-.home-page-grid-container__widget
+                        .home-page-grid-container__widget-content
+                            h1 Item 10
+                    //-.home-page-grid-container__widget.home-page-grid-container__widget--add#add-widget-btn
+                        .home-page-grid-container__widget-content
+                            a(href="").home-page-grid-container__widget__full-link
+                                h1 Add Widget
             else
                 .home-page-grid-container
                     .home-page-grid-container__widget
-                        h1 Coming Soon
+                        .home-page-grid-container__widget-content
+                            h1 Coming Soon
