Add widget management on admin panel

--- a/views/admin-users-user.pug
+++ b/views/admin-users-user.pug
@@ -21,6 +21,11 @@ block admin-content
                 span Date of Birth
                 span.myaccount-stack-view__box-value #{adminUser.dob.getDate()}/#{adminUser.dob.getMonth() + 1}/#{adminUser.dob.getFullYear()}
                 img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+        h3 Widgets
+        .myaccount-stack-view
+            a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="widgets/")
+                span Manage Widgets
+                img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
         h3 Security
         .myaccount-stack-view
             a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="security/privileges/")
