Add RESTful API for Widgets

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,7 +23,7 @@ html(lang='en-gb')
         meta(property='og:title' content='Bester Intranet')
         meta(property='og:type' content='website')
         meta(property='og:image' content='https://static.besterintranet.com/assets/images/logo512x512.png')
-        meta(Qproperty='og:url' content='https://www.besterintranet.com')
+        meta(property='og:url' content='https://www.besterintranet.com')
         meta(name='theme-color' content='#FFFFFF')
         meta(name='apple-mobile-web-app-status-bar-style' content='black-translucent')
         meta(name='application-name' content='Bester Intranet')
