Hotfixes before push to master

--- a/views/home.pug
+++ b/views/home.pug
@@ -39,7 +39,9 @@ block content
                 .home-page-grid-container
                     //-.home-page-grid-container__widget
                         .home-page-grid-container__widget-content
-                            h1 Item
+                            .home-page-grid-container__widget-title
+                                h1 Item
+                                .home-page-grid-container__widget-title-menu
                     //-.home-page-grid-container__widget
                         .home-page-grid-container__widget-content
                             h1 Item 2
