--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -463,7 +463,7 @@ label {
     -ms-transition: box-shadow 0.25s;
     -o-transition: box-shadow 0.25s;
     padding: 15px;
-    overflow: hidden;
+    overflow: visible;
     animation: slide-up 0.4s ease;
 }
 
@@ -487,11 +487,93 @@ label {
 }
 
 .home-page-grid-container__widget-content {
-    
+    height: calc(100% - 30px);
+    overflow-y: hidden;
+}
+
+.home-page-grid-container__widget-title {
+    position: relative;
 }
 
 .home-page-grid-container__widget h1 {
     margin: 0;
+}
+
+.home-page-grid-container__widget-menu-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 20px;
+    height: 28px;
+    text-align: right;
+    font-weight: 900;
+    font-size: 23px;
+    cursor: pointer;
+}
+
+.home-page-grid-container__widget-menu-btn::after {
+    content: '\22EE';
+}
+
+.home-page-grid-container__widget-menu {
+    position: relative;
+}
+
+.home-page-grid-container__widget-menu-list {
+    display: none;
+    position: absolute;
+    right: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    border-radius: 7px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 4px 0px #0000006e;
+    transition: box-shadow 0.25s;
+    -moz-transition: box-shadow 0.25s;
+    -webkit-transition: box-shadow 0.25s;
+    -ms-transition: box-shadow 0.25s;
+    -o-transition: box-shadow 0.25s;
+    z-index: 1;
+}
+
+.home-page-grid-container__widget-menu-item {
+    padding: 7px;
+}
+
+.home-page-grid-container__widget-menu-item:hover {
+    background-color: #e4e4e4;
+}
+
+.home-page-grid-container__widget-menu-item:first-child:hover {
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    background-color: #e4e4e4;
+}
+
+.home-page-grid-container__widget-menu-item:last-child:hover {
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
+    background-color: #e4e4e4;
+}
+
+.home-page-grid-container__widget-menu-item.delete:hover {
+    background-color: #ad1a1a;
+    color: #ffffff;
+}
+
+.home-page-grid-container__widget-menu-item.delete:first-child:hover {
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    background-color: #ad1a1a;
+    color: #ffffff;
+}
+
+.home-page-grid-container__widget-menu-item.delete:last-child:hover {
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
+    background-color: #ad1a1a;
+    color: #ffffff;
 }
 
 .home-page-grid-container__widget--add {
