Create errors database and refactoring part 1

--- a/views/error-custom.pug
+++ b/views/error-custom.pug
@@ -13,3 +13,4 @@ block content
         .container--center.basic-header-body-container
             h1 #{error.title}
             p #{error.message}
+            pre Error Code: #{error.code}
