--- a/views/home.pug
+++ b/views/home.pug
@@ -24,6 +24,8 @@ block content
                     .main-header-dropdown__content
                         ul.main-header-dropdown-content__list
                             li.main-header-dropdown__item
+                                a(href="https://accounts.besterintranet." + tld + "/myaccount/") My Account
+                            li.main-header-dropdown__item
                                 a(href="") Help
                             li.main-header-dropdown__item
                                 a(href="https://accounts.besterintranet." + tld + "/logout/?nonce=" + logoutNonce) Logout
