--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,6 +32,7 @@ html(lang='en-gb')
         meta(name='msapplication-starturl' content='/')
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
         script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous')
+        script(src='https://www.besterintranet.' + tld + '/scripts/lib/jquery.ba-throttle-debounce.min.js')
         if scriptsBefore
             each script in scriptsBefore
                 script(src= script)
